--- a/kirti/webpage-1/develop_webpage/about-template.html
+++ b/kirti/webpage-1/develop_webpage/about-template.html
@@ -88,8 +88,16 @@
 		</p>
 	<br />
 
+    <hr>
+    <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
+    <!-- img src="" width="200", height="50" -->
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="295", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="335", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="311", height="110" />
 
-
+	<br />
+	<br />
+	<br />
 
 </div>
 
