--- a/kirti/webpage-1/develop_webpage/about-template.html
+++ b/kirti/webpage-1/develop_webpage/about-template.html
@@ -1,6 +1,6 @@
 <!-- component.html -->
 <div style="width:950px">
-	<div style="text-align: center;"> <h3> <b> Pacific Northwest Ag Climate Tools </b> </h3></div>
+	<div style="text-align: center;"> <h3> <b> Pacific Northwest Ag. Climate Tools </b> </h3></div>
 
 	<br />
 	<br />
