--- a/kirti/webpage-1/develop_webpage/people-template.html
+++ b/kirti/webpage-1/develop_webpage/people-template.html
@@ -9,7 +9,7 @@
 			text-align: center;
 			font-size: 16px;
 			font-weight: bold;
-			text-decoration: underline;
+			text-decoration: none;
 		    }
 		.top {
 			//padding: 15px 20px;
@@ -27,7 +27,127 @@
 		}
     </style>
 
-    
+    <table style="margin-left: 200px">
+		<tr>
+		    <!---<th class="top"> Project Lead    </th>
+			<th class="top"> Project Co-Lead </th>--->
+			<th> 
+				<div style="text-align: center;"> 
+					<h5> <b> Project Lead </b> </h5>
+				</div> 
+			</th>
+			
+			<th> 
+				<div style="text-align: center;"> 
+					<h5> <b> Project Co-Lead </b> </h5>
+				</div> 
+			</th>
+		</tr>
+
+		<tr>
+			<td class="top"> 
+	  			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kirti_picture.png" width="200" height="200" /> <br />
+				<b> Kirti Rajagopalan </b> <br /> CSANR, Washington State University
+			</td>
+			<td class="top"> 
+				<img src = "http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/VincePJones7.jpg" width="200" height="200" /> <br />
+				<b> Vince Jones </b> <br /> WSU Tree Fruit Research and Extension Center
+			</td>
+		</tr>
+    </table>
+
+    <hr>
+
+    <!--- ************************************ --->
+    <!--- StakeHolders Engagement and Outreach --->
+    <!--- ************************************ --->
+
+    <table style="margin-left: 155px; margin-top: 20px">
+		<tr>
+			<!--- <th class="middle" colspan="2"> Stakeholder Engagement and Outreach </th> --->
+			<div style="text-align: center;"> <h5> <b> Stakeholder Engagement and Outreach </b> </h5></div>
+		</tr>
+
+		<tr>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Chambers-Ute_lg.jpg" width="170" height="200" /> 
+				<br />
+				<b>  Ute Chambers </b> 
+			</td>
+
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Hall-thumb.jpg" width="200" height="200" /> 
+				<br /> 
+				<b>  Sonia Hall </b> 
+			</td>
+
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/walden-e.jpg" width="160" height="200"  /> 
+				<br /> 
+				<b>  Von Walden </b> 
+			</td>
+
+			<td class="middle"> 
+			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/B_liu.mingliang.jpg" width="160" height="200" /> <br /> 
+			<b>  Mingliang Liu </b>  <!-- Civil Engineering, WSU -->
+		    </td>
+		
+		</tr>
+    </table>
+
+    <table style="margin-left: 155px; margin-top: 20px">
+	    <tr>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Georgine-Yorgey.jpg" width="160" height="200" /> <br /> 
+				<b>  Georgine Yorgey </b> 
+			</td>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/SVH-Kruger-pic-crop.jpg" width="160" height="200" /> <br /> 
+				<b> Chad Kruger </b>
+			</td>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kalcsits-pic.jpg" width="160" height="200" /> <br /> 
+				<b> Lee Kalcsits </b>
+			</td>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Stockle.jpg" width="160" height="200" /> <br /> 
+				<b> Claudio O. Stöckle </b>
+			</td>
+
+	    </tr>
+    </table>
+
+
+    <hr>
+
+    <!--- ************************************ --->
+
+           <!--- Programmer and Postdoc --->
+
+    <!--- ************************************ --->
+    <table style="margin-left: 155px; margin-top: 20px">
+    	<tr>
+    		<th class="top" > Programmer </th>
+			<th class="top" colspan="2"> Postdoc </th>
+		</tr>
+		<tr>
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Giridhar-crop.JPG" width="200" height="200" /> 
+				<br /> 
+				<b> Giridhar Manoharan </b>
+			</td>
+
+			<td class="middle"> 
+				<img src="https://static1.squarespace.com/static/5a4c161cfe54ef45b17aa18e/t/5a4c563e9140b791bb29fba1/1525056670012/DSC_3210.jpg?format=2500w" width="240" height="200" /> 
+				<br />
+				<b>  Hossein Noorazar </b>
+			</td>
+		</tr>
+    </table>
+
+
+
+
 
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
