--- a/kirti/webpage-1/develop_webpage/Codling_Moth_Template.html
+++ b/kirti/webpage-1/develop_webpage/Codling_Moth_Template.html
@@ -1,9 +1,11 @@
 <!-- component.html -->
 <div style="width:950px">
-	<div style="text-align: left;"> <h5> <b> Codling Moth Life cycle </b> </h5></div>
-	<br />
-	<br />
-
+	<div style="text-align: left;"> 
+		<h5> 
+		    <b> Codling Moth Life cycle </b> 
+	    </h5>
+	</div>
+	
 	<p>
 		The codling moth overwinters as a mature larva 
 		in a silk cocoon. In early spring, the overwintering 
@@ -41,6 +43,66 @@
 		fraction is diapause-induced for overwintering, and a 
 		larger fraction pupates into the next generation.
 	</p>
+
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/life-cycle-2.png" width="750px" height="130px" align="middle" vspace="10px" />
+
+	<p>
+		Field measures at selected tree-fruit growing 
+		locations in Washington State helped develop an 
+		empirical relationship between day length and 
+		the percentage of larvae that were diapause-induced 
+		(or conversely, the percent that escaped diapause-induction and pupated). In Washington State, almost 100% of larvae are diapause-induced before mid-April and after late 
+		August. Diapause-induced larvae that emerged in 
+		August sometimes do not accumulate enough growing 
+		degree days to mature enough to overwinter successfully.
+	</p>
+
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/life-cycle-3.png" width="400px" height="300px" vspace="10px"/> &nbsp; &nbsp; &nbsp;
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/life-cycle-4.png" width="400px" height="300px" vspace="10px"/>
+
+
+
+	<p>
+		Codling moth growth is primarily temperature-driven, 
+		as is the case with cold-blooded insects in general. 
+		Degree day models have been used successfully in 
+		forecasting the timing of growth stages, and these 
+		models are commonly used to provide integrated pest 
+		management decision support such as through the WSU 
+		Tree-Fruit Decision Aid System (DAS). Our analyses 
+		are based on the degree day models for codling moth 
+		developed for and used in DAS.
+	</p>
+
+
+	<h4> <b> <u> Codling Moth Management Strategies </u> </b> </h4>
+	<p>
+		Codling moth management aims to disrupt three 
+		developmental stages: eggs, newly hatched larvae, 
+		and adults. Eggs can be prevented from hatching with 
+		topical or residual pesticides. Parasitoid wasps such 
+		as Trichogramma have also been shown to help suppress 
+		codling moth populations by attacking the egg stage. 
+		Newly hatched codling moth larvae can be targeted with 
+		residual pesticides or with the codling moth granulosis 
+		virus. Applications targeting the newly hatched 
+		larvae need to be timed perfectly, because the 
+		larvae enter the safety of the fruit within a 
+		day of hatching. Finally, mating disruption is 
+		directed at the adult codling moths. It delays 
+		and prevents mating and, thus, leads to a substantial 
+		reduction of eggs laid in the orchard. Management 
+		programs combine these strategies in one way or 
+		another to keep fruit damage below the economic threshold.
+		<br />
+		For further details on using the WSU 
+		Tree-Fruit Decision Aid System to inform 
+		the strategies and timing of codling moth 
+		control efforts, please see 
+		"<a href="https://decisionaid.systems/page/cm_management_program">What Makes an Effective Moth Management Program?</a>" 
+		on the DAS website. 
+	</p>
+
 
 
 
