--- a/kirti/webpage-1/develop_webpage/story-template.html
+++ b/kirti/webpage-1/develop_webpage/story-template.html
@@ -2,43 +2,97 @@
 <div style="width:950px">
 	<div style="text-align: left;"> 
 		<h5> 
-		    <b> Climate Data </b> 
+		    <b> Changing Codling Moth Pest Pressures: What's the story? </b> 
 	    </h5>
 	</div>
 
-	<p>
-		The codling moth tool allows you to explore how codling moth pressure is expected to change in the future, as temperatures warm. It does this by comparing pest risk and key developmental stages of codling moth modeled using historical climate conditions, on the one hand, to those same risk and stages modeled using projected future climate conditions.
-	</p>
+<ol>
+
+  <li> 
+    <b>
+	    We expect to see a higher codling moth risk-more number of generations and stronger generations-as temperatures get warmer. 
+    </b> 
+
+    <br />
+    Historically Washington State has experienced two full generation cycles of the codling moth and a partial third generation in warmer areas. By the 2040s, all of Washington is projected to experience a full third generation each year. Some areas even face a significant fourth generation of codling moth by the 2040s, and this risk becomes more widespread further out into the future. Check out the "Pest risk" tab.
+    <br />
     
+    <b> <u> Management implication </u></b> 
     <br />
-    <h4><b> Historical Data </b></h4>
-    <p>
-		The climate data used to model codling moth under historical conditions are gridded meteorological observations based on Abatzoglou (2011), for the period from 1979 to 2016. 
-	</p>
+    Increased pest risk implies the need for additional sprays, a larger range of chemicals, and an increased cost of pest control. It also implies increased pesticide resistance risks.
+  </li>
+   
+  <br />
+
+  <li> 
+    <b> We expect to see all codling moth development stages starting earlier. </b> 
+    <br />
+    The first flight of the overwintering generation and all subsequent phenological events are projected to begin earlier in the year. The projected advancement is about 8 days on average every 20 years. The shift in the timing of these events also has implications for the relative fraction of larvae that get diapause-induced versus progressing to emerge as adult moths. Check out the "Codling Moth Flight" and "Codling Moth Egg Hatch" tabs. 
+    <br />
+    <b><u> Management implication </u></b> 
+    <br />
+    Timing of sprays will need to be shifted accordingly. Traps need to be set earlier than typically done in the region, or the ideal window for control measures might be missed.
+  </li>
+
+  <br />
+  <li> 
+    <b>
+	We expect to see a greater proportion of the first generation overwintering and causing damage the following year. In contrast, a greater proportion of the second generation causes damage in the current year. 
+    </b> 
+    <br />
+    The relative fraction of larvae getting diapause-induced (and therefore overwintering until next season) versus pupating (and progressing to the next generation that same season) is a function of the day length (see codling moth life cycle tab for more details). When days are shorter, a larger fraction of larvae get diapause-induced. Conversely, when days are longer, a smaller fraction of larvae get diapause-induced. With earlier development, the first generation eggs hatch into larvae earlier in the year when the days are still short, so a larger fraction of them get diapause-induced and overwinter, thereby requiring control the following year. On the other hand, earlier development means the second generation eggs hatching into larvae when the days are longer and the relative fraction of larvae escaping diapause and causing further issues in the current year is larger. Check out the "Diapause" tab.
+    <br />
+    <b><u> Management implication </u></b> 
+    <br />
+    More control than currently typical might be needed to address the second generation of codling moth.
+  </li>
+
+  <br />
+  <li>
+     <b>
+	 We expect to see a shorter window of time 
+	 for effective control, 
+	 but control mechanisms such as pesticides 
+	 and mating disruption will work 
+	 better under warmer climates.
+     </b> 
+
+     <br />
+     Warming leads to accelerated degree day 
+     accumulation, so that more of the pest 
+     population pass through susceptible stages 
+     for pest control for a given pesticide residual 
+     time, making pesticide treatments more 
+     effective. However, the window of opportunity 
+     for control is smaller, and even a day's 
+     delay can allow significant number of larvae 
+     to enter the fruit and cause damage. Similarly, 
+     mating delay is a function of degree day 
+     accumulation. Faster accumulation implies 
+     that a within a given delay, there will be 
+     much larger decrease in the population of fertilized eggs.
+     <br />
+     <b><u> Management implication </u></b> 
+     <br />
+    The window of opportunity for control is shorter, and it is critical to capture it right. However, if captured correctly, there might be benefits in terms of more effective control.
+
+    <!--Visualization tab for this is under construction. Stay tuned!-->
+  </li>
+  <br />
+
+  <li>
+	  <b> We expect bloom timing in apple trees to shift to earlier in the year. </b> 
+	  <br />
+	  Warming leads to accelerated degree day accumulation in apple trees, and shifts in bloom timing to earlier in the year.
+	  <br />
+    <b><u> Management implication </u></b> 
 
     <br />
-	<h4> <b> Future Climate Projections </b> </h4>
-	<p> 
-		The climate data used to model codling moth into the future starts with model output from the Coupled Model Intercomparison Project 5 (CMIP5; Taylor et al., 2012). CMIP5 is meant to provide a framework for coordinated climate change experiments, and is a collaborative effort across multiple research groups running global general circulation models to produce comparable projections of climatic variables into the future. The global future climate projections are too coarse in resolution for many regional applications, and so have been downscaled using the Modified Multivariate Adaptive Constructed Analog (MACA) method (Abatzoglou and Brown, 2012). 
-		<br />
-		In the codling moth tool, the future climate projections are considered in three time frames into the future: 
-		<ul>
-			<li> <b><u>2040s</u>:</b> refers to the range of years 2025 to 2055. </li>
-			<li> <b><u>2060s</u>:</b> refers to the range of years 2045 to 2075. </li>
-			<li> <b><u>2080s</u>:</b> refers to the range of years 2065 to 2095. </li>
-		</ul>
+	Stay tuned for details on this! 	  
+  </li>
 
-		How temperatures are expected to change in the future is dependent on how far, how quickly, and how consistently the greenhouse gas concentrations in the atmosphere accumulate. As no one knows for sure how those concentrations will change, CMIP5 provides global data under different greenhouse gas concentration pathways, known in the climate modeling literature as <a href="http://sedac.ipcc-data.org/ddc/ar5_scenario_process/RCPs.html">Representative Concentration Pathways</a> (or RCPs). Each RCP could result from different combinations of economic, technological, demographic, policy, and institutional futures. 
-		<br />
-		The codling moth tool used downscaled climate data developed under two of these representative greenhouse gas concentration pathways:
-		<ul>
-			<li> <b><u>RCP 4.5</u></b>, the second lowest concentration pathways considered in CMIP5, where the concentration of greenhouse gases in the atmosphere is increasing, and expected to stabilize after the year 2100. This is the "lower temperature change" climate change scenario. 
-			</li>
-			<li> <b><u>RCP 8.5</u></b>, the highest concentration pathway considered in CMIP5, which corresponds to relatively higher greenhouse gas concentrations and temperature increase projections than the RCP 4.5 scenario. This is therefore the "higher temperature change" climate change scenario. Therefore, temperature-based impacts are typically more pronounced for the RCP 8.5 scenario.
-			</li>
-		</ul>
 
-	</p>
+</ol>
 
 
 
