--- a/kirti/webpage-1/develop_webpage/video-template.html
+++ b/kirti/webpage-1/develop_webpage/video-template.html
@@ -2,41 +2,28 @@
 <div style="width:950px">
 	<div style="text-align: left;"> 
 		<h5> 
-		    <b> We would love to hear from you! </b> 
+		    <b> Here is a short video on how to navigate the website. </b> 
 	    </h5>
 	</div>
 
 
-  <table>
-    <style>
-      td {
-        padding: 15px 50px;
-      }
-    </style>
-    <tr>
-      <td>
-        <b> Kirti Rajagopalan </b> 
-        <br />
-        CSANR, WSU 
-        <br />
-        <b>Email:</b> <a href="mailto:kirtir@wsu.edu">kirtir@wsu.edu</a> <br />
-        <b>Phone:</b> (515) 450-7142 
-        <br />
-        <img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kirti_picture.png" width="200" height="200" />
-      </td>
-      <td>
-              <b> Vince Jones </b> 
-              <br />
-              WSU TFREC, WSU DAS 
-              <br />
-              <b>Email:</b> <a href="mailto:vpjones@wsu.edu">vpjones@wsu.edu</a> 
-              <br />
-              <b>Phone:</b> (509) 663-8181
-              <br />
-        <img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/VincePJones7.jpg" width="200" height="200" />
-      </td>
-    </tr>
-  </table>
+  <video width="700" height="420" controls  poster="poster.png">
+      <source src="AgClimateTool_CM_advisors_3rd.mp4" type="video/mp4" />
+         <p>Your browser does not support HTML5 video.</p>
+  </video>
+
+  <br />
+  <br />
+
+  <p>
+    <b>Please take some time to explore the website. We will ask your perspective on the following:</b>
+    <ul>
+      <li>What aspect was particularly interesting and why?</li>
+      <li>What aspect was confusing and why?</li>
+      <li>What aspect was not useful and why?</li>
+      <li>What was missing from the web tool?</li>
+    </ul>
+  </p>
 
 
     
