--- a/Website/develop_webpage/about-template.html
+++ b/Website/develop_webpage/about-template.html
@@ -91,9 +91,9 @@
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
     <!-- img src="" width="200", height="50" -->
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="295", height="110" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="335", height="110" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="311", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="147", height="55", hspace="10"/>
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="167", height="55", hspace="10"/>
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="155", height="55", hspace="10" />
 
 	<br />
 	<br />
