chilling-binary_read

--- a/Shiny-Stuff/Website/develop_webpage/people-template.html
+++ b/Shiny-Stuff/Website/develop_webpage/people-template.html
@@ -127,20 +127,20 @@
     <!--- ************************************ --->
     <table style="margin-left: 155px; margin-top: 20px">
     	<tr>
-    		<th class="top" > Programmer </th>
-			<th class="top" colspan="2"> Postdoc </th>
+    		<th class="top" > Postdoc </th>
+			<th class="top" colspan="2"> Programmer </th>
 		</tr>
 		<tr>
-			<td class="middle"> 
-				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Giridhar-crop.JPG" width="200" height="200" /> 
-				<br /> 
-				<b> Giridhar Manoharan </b>
-			</td>
-
 			<td class="middle"> 
 				<img src="https://static1.squarespace.com/static/5a4c161cfe54ef45b17aa18e/t/5a4c563e9140b791bb29fba1/1525056670012/DSC_3210.jpg?format=2500w" width="240" height="200" /> 
 				<br />
 				<b>  Hossein Noorazar </b>
+			</td>
+
+			<td class="middle"> 
+				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Giridhar-crop.JPG" width="200" height="200" /> 
+				<br /> 
+				<b> Giridhar Manoharan </b>
 			</td>
 		</tr>
     </table>
