--- a/hydro_group_website/home-page/take-a-tour.html
+++ b/hydro_group_website/home-page/take-a-tour.html
@@ -1,11 +1,11 @@
 
 <br />
 <h4> <b> Here is a short video on how to navigate the website. </b> </h4>
-
 <br />
 
-<iframe width="672" height="536" src="https://www.youtube.com/embed/Q7T7at8pWHQ">
-</iframe>
+<iframe src="https://www.youtube.com/embed/Q7T7at8pWHQ?rel=0;controls=0;showinfo=0;theme=light" 
+allowfullscreen="" width="672" height="536" frameborder="0"></iframe>
+
 <br />
 <br />
 <br />
