--- a/my-version-website/people-template.html
+++ b/my-version-website/people-template.html
@@ -47,47 +47,49 @@
 		<tr>
 			<td class="top"> 
 	  			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kirti_picture.png" width="200" height="200" /> <br />
-				<a href="https://wrc.wsu.edu/person/rajagopalan-kirti"> <b> Kirti Rajagopalan </b> </a> <br /> CSANR, Washington State University
+				<b> Kirti Rajagopalan </b> <br /> CSANR, Washington State University
 			</td>
 			<td class="top"> 
 				<img src = "http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/VincePJones7.jpg" width="200" height="200" /> <br />
-				<a href="http://entomology.tfrec.wsu.edu/VPJ_Lab/"><b> Vince Jones </b></a> <br /> WSU Tree Fruit Research and Extension Center
+				<b> Vince Jones </b> <br /> WSU Tree Fruit Research and Extension Center
 			</td>
 		</tr>
     </table>
 
     <hr>
+
     <!--- ************************************ --->
     <!--- StakeHolders Engagement and Outreach --->
     <!--- ************************************ --->
+
     <table style="margin-left: 155px; margin-top: 20px">
 		<tr>
 			<!--- <th class="middle" colspan="2"> Stakeholder Engagement and Outreach </th> --->
-			<div style="text-align: center;"> <h4> <b> Stakeholder Engagement and Outreach </b> </h4></div>
+			<div style="text-align: center;"> <h5> <b> Stakeholder Engagement and Outreach </b> </h5></div>
 		</tr>
 
 		<tr>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Chambers-Ute_lg.jpg" width="170" height="200" /> 
 				<br />
-				<a href="http://entomology.tfrec.wsu.edu/VPJ_Lab/UteChambers.html"> <b>Ute Chambers </b> </a>
+				<b>  Ute Chambers </b> 
 			</td>
 
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Hall-thumb.jpg" width="200" height="200" /> 
 				<br /> 
-				<a href="https://wrc.wsu.edu/person/hall-sonia/"><b> Sonia Hall </b></a>
+				<b>  Sonia Hall </b> 
 			</td>
 
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/walden-e.jpg" width="160" height="200"  /> 
 				<br /> 
-				<a href="https://ce.wsu.edu/faculty/walden/"><b> Von Walden </b></a>
+				<b>  Von Walden </b> 
 			</td>
 
 			<td class="middle"> 
 			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/B_liu.mingliang.jpg" width="160" height="200" /> <br /> 
-			<a href="https://ce.wsu.edu/faculty/liu-mingliang/" ><b> Mingliang Liu </b></a>   <!-- Civil Engineering, WSU -->
+			<b>  Mingliang Liu </b>  <!-- Civil Engineering, WSU -->
 		    </td>
 		
 		</tr>
@@ -97,19 +99,19 @@
 	    <tr>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Georgine-Yorgey.jpg" width="160" height="200" /> <br /> 
-				<a href="https://wrc.wsu.edu/person/yorgey-georgine/"> <b>Georgine Yorgey</b></a>
+				<b>  Georgine Yorgey </b> 
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/SVH-Kruger-pic-crop.jpg" width="160" height="200" /> <br /> 
-				<a href="https://wrc.wsu.edu/person/kruger-chad/"><b> Chad Kruger </b></a> 
+				<b> Chad Kruger </b>
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kalcsits-pic.jpg" width="160" height="200" /> <br /> 
-				<a href="https://horticulture.wsu.edu/people/kalcsits/"><b> Lee Kalcsits </b></a> 
+				<b> Lee Kalcsits </b>
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Stockle.jpg" width="160" height="200" /> <br /> 
-				<a href="https://bsyse.wsu.edu/people/faculty/stockle/"><b> Claudio O. Stöckle </b></a>
+				<b> Claudio O. Stöckle </b>
 			</td>
 
 	    </tr>
@@ -123,7 +125,7 @@
            <!--- Programmer and Postdoc --->
 
     <!--- ************************************ --->
-    <table style="margin-left: 250px; margin-top: 10px">
+    <table style="margin-left: 155px; margin-top: 20px">
     	<tr>
     		<th class="top" > Postdoc </th>
 			<th class="top" colspan="2"> Programmer </th>
@@ -132,7 +134,7 @@
 			<td class="middle"> 
 				<img src="https://static1.squarespace.com/static/5a4c161cfe54ef45b17aa18e/t/5a4c563e9140b791bb29fba1/1525056670012/DSC_3210.jpg?format=2500w" width="240" height="200" /> 
 				<br />
-				<a href="https://hnoorazar.com/know-me/"> <b> Hossein Noorazar </b></a>
+				<b>  Hossein Noorazar </b>
 			</td>
 
 			<td class="middle"> 
@@ -143,12 +145,16 @@
 		</tr>
     </table>
 
+
+
+
+
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
     <!-- img src="" width="200", height="50" -->
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="220", height="82" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="250", height="82" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="232", height="82" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="295", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="335", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="311", height="110" />
 
 	<br />
 	<br />
