--- a/my-version-website/home_page/video-template.html
+++ b/my-version-website/home_page/video-template.html
@@ -7,10 +7,8 @@
 	</div>
 
 
-  <video width="700" height="420" controls  poster="poster.png">
-      <source src="AgClimateTool_CM_advisors_3rd.mp4" type="video/mp4" />
-         <p>Your browser does not support HTML5 video.</p>
-  </video>
+  <iframe src="https://www.youtube.com/embed/Q7T7at8pWHQ?rel=0;controls=0;showinfo=0;theme=light" 
+allowfullscreen="" width="672" height="536" frameborder="0"></iframe>
 
   <br />
   <br />
@@ -33,9 +31,9 @@
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
     <!-- img src="" width="200", height="50" -->
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="295", height="110" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="335", height="110" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="311", height="110" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="220", height="82" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="220", height="82" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="220", height="82" />
 
 	<br />
 	<br />
