--- a/my-version-website/home_page/people-template.html
+++ b/my-version-website/home_page/people-template.html
@@ -27,7 +27,7 @@
 		}
     </style>
 
-    <table style="margin-left: 200px">
+    <table style="margin-left: 150px">
 		<tr>
 		    <!---<th class="top"> Project Lead    </th>
 			<th class="top"> Project Co-Lead </th>--->
@@ -47,71 +47,69 @@
 		<tr>
 			<td class="top"> 
 	  			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kirti_picture.png" width="200" height="200" /> <br />
-				<b> Kirti Rajagopalan </b> <br /> CSANR, Washington State University
+				<a href="https://wrc.wsu.edu/person/rajagopalan-kirti"> <b> Kirti Rajagopalan </b> </a> <br /> CSANR, Washington State University
 			</td>
 			<td class="top"> 
 				<img src = "http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/VincePJones7.jpg" width="200" height="200" /> <br />
-				<b> Vince Jones </b> <br /> WSU Tree Fruit Research and Extension Center
+				<a href="http://entomology.tfrec.wsu.edu/VPJ_Lab/"><b> Vince Jones </b></a> <br /> WSU Tree Fruit Research and Extension Center
 			</td>
 		</tr>
     </table>
 
     <hr>
-
     <!--- ************************************ --->
     <!--- StakeHolders Engagement and Outreach --->
     <!--- ************************************ --->
-
-    <table style="margin-left: 155px; margin-top: 20px">
+    <table style="margin-left: 150px; margin-top: 20px">
 		<tr>
 			<!--- <th class="middle" colspan="2"> Stakeholder Engagement and Outreach </th> --->
-			<div style="text-align: center;"> <h5> <b> Stakeholder Engagement and Outreach </b> </h5></div>
+			<div style="text-align: center;"> <h4> <b> Stakeholder Engagement and Outreach </b> </h4></div>
 		</tr>
 
 		<tr>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Chambers-Ute_lg.jpg" width="170" height="200" /> 
 				<br />
-				<b>  Ute Chambers </b> 
+				<a href="http://entomology.tfrec.wsu.edu/VPJ_Lab/UteChambers.html"> <b>Ute Chambers </b> </a>
 			</td>
 
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Hall-thumb.jpg" width="200" height="200" /> 
 				<br /> 
-				<b>  Sonia Hall </b> 
+				<a href="https://wrc.wsu.edu/person/hall-sonia/"><b> Sonia Hall </b></a>
 			</td>
 
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/walden-e.jpg" width="160" height="200"  /> 
 				<br /> 
-				<b>  Von Walden </b> 
+				<a href="https://ce.wsu.edu/faculty/walden/"><b> Von Walden </b></a>
 			</td>
 
 			<td class="middle"> 
 			<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/B_liu.mingliang.jpg" width="160" height="200" /> <br /> 
-			<b>  Mingliang Liu </b>  <!-- Civil Engineering, WSU -->
+			<a href="https://ce.wsu.edu/faculty/liu-mingliang/" ><b> Mingliang Liu </b></a>   <!-- Civil Engineering, WSU -->
 		    </td>
 		
 		</tr>
     </table>
 
-    <table style="margin-left: 155px; margin-top: 20px">
+    <table style="margin-left: 200px; margin-top: 20px">
 	    <tr>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Georgine-Yorgey.jpg" width="160" height="200" /> <br /> 
-				<b>  Georgine Yorgey </b> 
+				<a href="https://wrc.wsu.edu/person/yorgey-georgine/"> <b>Georgine Yorgey</b></a>
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/SVH-Kruger-pic-crop.jpg" width="160" height="200" /> <br /> 
-				<b> Chad Kruger </b>
+				<a href="https://wrc.wsu.edu/person/kruger-chad/"><b> Chad Kruger </b></a> 
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/kalcsits-pic.jpg" width="160" height="200" /> <br /> 
-				<b> Lee Kalcsits </b>
+				<a href="https://horticulture.wsu.edu/people/kalcsits/"><b> Lee Kalcsits </b></a> 
 			</td>
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Stockle.jpg" width="160" height="200" /> <br /> 
-				<b> Claudio O. Stöckle </b>
+				<a href="https://bsyse.wsu.edu/people/faculty/stockle/"><b> Claudio O. Stöckle </b></a>
 			</td>
 
 	    </tr>
@@ -125,36 +123,31 @@
            <!--- Programmer and Postdoc --->
 
     <!--- ************************************ --->
-    <table style="margin-left: 155px; margin-top: 20px">
-    	<tr>
-    		<th class="top" > Postdoc </th>
-			<th class="top" colspan="2"> Programmer </th>
-		</tr>
+    <table style="margin-left: 250px; margin-top: 10px">
+
 		<tr>
 			<td class="middle"> 
 				<img src="https://static1.squarespace.com/static/5a4c161cfe54ef45b17aa18e/t/5a4c563e9140b791bb29fba1/1525056670012/DSC_3210.jpg?format=2500w" width="240" height="200" /> 
 				<br />
-				<b>  Hossein Noorazar </b>
+				<a href="https://hnoorazar.com/know-me/"> <b> Hossein Noorazar </b></a>
+				(Postdoc)
 			</td>
 
 			<td class="middle"> 
 				<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/Giridhar-crop.JPG" width="200" height="200" /> 
 				<br /> 
 				<b> Giridhar Manoharan </b>
+				(Prpgrammer)
 			</td>
 		</tr>
     </table>
-
-
-
-
 
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
     <!-- img src="" width="200", height="50" -->
 	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="220", height="82" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="220", height="82" />
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="220", height="82" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="250", height="82" />
+	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="232", height="82" />
 
 	<br />
 	<br />
