--- a/website/hydro_group_website/home-page/people.html
+++ b/website/hydro_group_website/home-page/people.html
@@ -1,6 +1,6 @@
 <!-- component.html -->
 <div style="width:950px">
-	<div style="text-align: center;"> <h3> <b> Get to Know the Team </b> </h3></div>
+	<div style="text-align: center;"> <h3> <b>&emsp &emsp Get to Know the Team </b> </h3></div>
 	<br />
 	<br />
 
@@ -96,7 +96,7 @@
     <table style="margin-left: 155px; margin-top: 20px">
 	    <tr>
 			<td class="middle"> 
-				<img src="Georgine-Yorgey.jpg" width="200" height="200" /> <br /> 
+				<img src="Georgine-Yorgey.jpg" width="190" height="190" /> <br /> 
 				<a href="https://wrc.wsu.edu/person/yorgey-georgine/"> <b>Georgine Yorgey</b></a>
 			</td>
 			<td class="middle"> 
@@ -145,7 +145,7 @@
     <hr>
     <!--- <div style="text-align: center;">  <h5> Our Sponsors </h5>  </div> --->
     <!-- img src="" width="200", height="50" -->
-	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="220", height="82" />
+	&emsp &emsp<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/CSANR-logo.png" width="220", height="82" />
 	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/WSU-DAS-log.png" width="250", height="82" />
 	<img src="http://agclimatetools.cahnrs.wsu.edu/users/giridhar/codmoth_copy/NW-Climate-Hub-Logo.jpg" width="232", height="82" />
 
