--- a/website/hydro_group_website/home-page/life-cycle.html
+++ b/website/hydro_group_website/home-page/life-cycle.html
@@ -6,7 +6,7 @@ The codling moth overwinters as a mature larva in a silk cocoon. In early spring
 <img src="life-cycle-1.png" width="750px" height="300px" align="middle" vspace="10px" />
 
 <p>
-Within each generation, a certain proportion of larvae pupate and start the next generation cycle. The rest go into a state of delayed development and inactivity (diapause induction). If these diapause-induced larvae reach full growth, they will overwinter successfully. Sometimes, the last generation diapause-induced larvae do not receive enough growing degree day accumulation to grow enough to successfully overwinter.
+Within each generation, a certain proportion of larvae pupate and start the next generation cycle. The rest goes into a state of delayed development and inactivity (diapause induction). If these diapause-induced larvae reach full growth, they will overwinter successfully. Sometimes, the last generation diapause-induced larvae do not receive enough growing degree day accumulation to grow enough to successfully overwinter.
 <br />
 The fraction of larvae that are diapause-induced versus those that pupate is a function of the photoperiod or day length. When the days are shorter, a larger fraction of the larvae are diapause-induced for overwintering and a smaller fraction pupate into the next generation. When the days are longer, a smaller fraction is diapause-induced for overwintering, and a larger fraction pupates into the next generation.
 </p>
