--- a/website/hydro_group_website/HTML_plots/subregion_groups.html
+++ b/website/hydro_group_website/HTML_plots/subregion_groups.html
@@ -2,7 +2,7 @@
 <div style="width:950px">
 	<div style="text-align: left;"> 
 		<h3> 
-		    <b> Sites divided into two groups:</b> 
+		    <b> Sites are divided into two subregions:</b> 
 	  </h3>
 	</div>
 
@@ -14,19 +14,19 @@
     </style>
     <tr>
       <td>
-        <img src="location-group.png" width="400" height="400"/>
+        <img src="location-group.png" width="500" height="500"/>
         <br />
         <br />
         <br />
-        <b> We use statistical methods, to group the regions into two, 
-            areas based on average historical, 
-            growing degree day accumulation.,
-            The warmer areas have an avgerage, 
-            annual historical GDD of XX, 
-            degree day F (provide a range), 
-            and the cooler areas have a, 
-            historical GDD of YY degree, 
-            days F (provide a range). </b> 
+         We use statistical methods, to group the 
+         regions into two areas based on average historical, 
+         growing degree day accumulation.
+         The warmer areas have an avgerage, 
+         annual historical GDD of XX, 
+         degree day F (provide a range), 
+         and the cooler areas have a, 
+         historical GDD of YY degree, 
+         days F (provide a range).
         <br />
         <br/>
       </td>
