--- a/website/codling_moth/explorer_climate_group.html
+++ b/website/codling_moth/explorer_climate_group.html
@@ -13,33 +13,33 @@
       <label><span> 2040s </span></label> <br/>
       <label style="margin-left: 40px">
         <input type="radio" name="cg" value="2040&#39;s_rcp85"/>
-        <span>rcp8.5</span>
+        <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
         <input type="radio" name="cg" value="2040&#39;s_rcp45"/>
-        <span>rcp4.5</span>
+        <span>RCP 4.5</span>
       </label>
     </div>
     <div class="radio">
       <label><span> 2060s </span></label> <br/>
       <label style="margin-left: 40px">
         <input type="radio" name="cg" value="2060&#39;s_rcp85"/>
-        <span>rcp8.5</span>
+        <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
         <input type="radio" name="cg" value="2060&#39;s_rcp45"/>
-        <span>rcp4.5</span>
+        <span>RCP 4.5</span>
       </label>
     </div>
     <div class="radio">
       <label><span> 2080s </span></label> <br/>
       <label style="margin-left: 40px">
         <input type="radio" name="cg" value="2080&#39;s_rcp85"/>
-        <span>rcp8.5</span>
+        <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
         <input type="radio" name="cg" value="2080&#39;s_rcp45"/>
-        <span>rcp4.5</span>
+        <span>RCP 4.5</span>
       </label>
     </div>
   </div>
