--- a/website/lagoon_overflow_risk/home-page/people.html
+++ b/website/lagoon_overflow_risk/home-page/people.html
@@ -127,7 +127,7 @@
 
         <tr>
             <td class="middle"> 
-                <img src="DSC_3210.jpg" width="185" height="186" /> 
+                <img src="Hossein.jpg" width="185" height="186" /> 
                 <br />
                 <a href="https://hnoorazar.com/know-me/"> <b> Hossein Noorazar </b></a>
                 <br>(Postdoc)
