--- a/website/bloom/explorer_climate_group.html
+++ b/website/bloom/explorer_climate_group.html
@@ -12,33 +12,33 @@
     <div class="radio">
       <label><span> 2040s </span></label> <br/>
       <label style="margin-left: 40px">
-        <input type="radio" name="cg" value="2040&#39;s_rcp85"/>
+        <input type="radio" name="cg" value="2026-2050_rcp85"/>
         <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
-        <input type="radio" name="cg" value="2040&#39;s_rcp45"/>
+        <input type="radio" name="cg" value="2026-2050_rcp45"/>
         <span>RCP 4.5</span>
       </label>
     </div>
     <div class="radio">
       <label><span> 2060s </span></label> <br/>
       <label style="margin-left: 40px">
-        <input type="radio" name="cg" value="2060&#39;s_rcp85"/>
+        <input type="radio" name="cg" value="2051-2075_rcp85"/>
         <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
-        <input type="radio" name="cg" value="2060&#39;s_rcp45"/>
+        <input type="radio" name="cg" value="2051-2075_rcp45"/>
         <span>RCP 4.5</span>
       </label>
     </div>
     <div class="radio">
       <label><span> 2080s </span></label> <br/>
       <label style="margin-left: 40px">
-        <input type="radio" name="cg" value="2080&#39;s_rcp85"/>
+        <input type="radio" name="cg" value="2076-2095_rcp85"/>
         <span>RCP 8.5</span>
       </label>
       <label style="margin-left: 10px">
-        <input type="radio" name="cg" value="2080&#39;s_rcp45"/>
+        <input type="radio" name="cg" value="2076-2095_rcp45"/>
         <span>RCP 4.5</span>
       </label>
     </div>
